src/components/App/App.scss
$primary-color: #fff;
$secondary-color: #000;

/* basic colors, margins, etc. */
body {
  background-color: $primary-color;
  margin: 0;
}

h2 {
  color: $secondary-color;
  text-align: center;
}

header,
section {
  padding-bottom: 2em;
}

img {
  width: 100%;
}

/* grid styling */
.basic-grid {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

/* form styling */
form {
  /* vertically centered */
  display: flex;
  flex-direction: column;
  margin: auto;
}

/* header styling */
header {
  height: 100vh;

  img {
    width: 100%;
    height: 70vh;
    display: flex;
  }
}

/* pattern styling
* sourced from: https://css-pattern.com/ 
*/
#background-pattern {
  height: 30em;

  --bg-pattern-size: 140px; /* control the size */
  $yellow: #f1cd01;

  --bg-pattern-gradient: #0000 52%, #170409 /* first color */ 54% 57%, #0000 59%;

  background: radial-gradient(
        farthest-side at -33.33% 50%,
        var(--bg-pattern-gradient)
      )
      0 calc(var(--bg-pattern-size) / 2),
    radial-gradient(farthest-side at 50% 133.33%, var(--bg-pattern-gradient))
      calc(var(--bg-pattern-size) / 2) 0,
    radial-gradient(farthest-side at 133.33% 50%, var(--bg-pattern-gradient)),
    radial-gradient(farthest-side at 50% -33.33%, var(--bg-pattern-gradient)),
    $yellow; /* second color */

  background-size: calc(var(--bg-pattern-size) / 4.667) var(--bg-pattern-size),
    var(--bg-pattern-size) calc(var(--bg-pattern-size) / 4.667);
}

/* planner styling */
#planner {
  .basic-grid {
    .map {
      height: 30em;
    }
  }
}

/* footer styling */

/* media queries */
@media (width <= 768px) {
  /* display each element in its own row */
  .basic-grid {
    grid-template-columns: 1fr;
  }
}

